--- a/terms.html
+++ b/terms.html
@@ -41,7 +41,7 @@
         <p><strong>Effective Date:</strong> December 26, 2024</p>
 
         <h2>1. Introduction</h2>
-        <p>By accessing or using the PDF Converter ("PDF Converter," "we," "us," or "our") website, the PDF Converter service, or any applications (including mobile applications) made available by <strong>CREATIVE TECHNOLOGIES LLC</strong> (collectively, the "Service"), you agree to comply with these Terms of Use and End User License Agreement ("Agreement"). If you do not agree to this Agreement, you must not access or use the Service.</p>
+        <p>By accessing or using the eSign App ("eSign App," "we," "us," or "our") website, the eSign App service, or any applications (including mobile applications) made available by <strong>CREATIVE TECHNOLOGIES LLC</strong> (collectively, the "Service"), you agree to comply with these Terms of Use and End User License Agreement ("Agreement"). If you do not agree to this Agreement, you must not access or use the Service.</p>
         <p>This Agreement, together with any related documents and policies, constitutes a legally binding agreement. Please read it carefully before downloading, installing, or using the app. If you do not agree to this Agreement, you must immediately discontinue using the app and delete it from your device.</p>
 
         <h2>2. Changes to this Agreement</h2>
@@ -55,10 +55,10 @@
         </ul>
 
         <h2>4. General Terms</h2>
-        <p>The app is a utility program designed for personal, non-commercial use, enabling document scanning, editing, sharing, and cloud storage. Other features include AI-based text analysis and file management tools. Details of features are available on the app's product page.</p>
+        <p>The app is a utility program designed for personal, non-commercial use, enabling document scanning, editing, sharing, and cloud storage. Other features include file management tools. Details of features are available on the app's product page.</p>
 
         <h2>5. Privacy Policy</h2>
-        <p>Your privacy is critical to us. By using the app, you agree to the terms outlined in our <a href="https://calledandrey.github.io/scannerapp/privacy.html">Privacy Policy</a>. If you do not accept the Privacy Policy, you must stop using the app.</p>
+        <p>Your privacy is critical to us. By using the app, you agree to the terms outlined in our <a href="https://calledandrey.github.io/pdfapp/privacy.html">Privacy Policy</a>. If you do not accept the Privacy Policy, you must stop using the app.</p>
 
         <h2>6. User Content, Feedback, and Intellectual Property</h2>
         <p><strong>User Content:</strong></p>
@@ -83,37 +83,30 @@
             <li>Misuse trademarks or proprietary content.</li>
         </ul>
 
-        <h2>8. Additional Regulations for AI Features</h2>
-        <ul>
-            <li>Do not provide content that is illegal, offensive, or infringes third-party rights.</li>
-            <li>Do not misrepresent AI-generated output as human-generated.</li>
-            <li>Do not use the output to harm others or violate laws.</li>
-        </ul>
-
-        <h2>9. Subscriptions and Charges</h2>
+        <h2>8. Subscriptions and Charges</h2>
         <ul>
             <li>Subscriptions auto-renew unless canceled at least 24 hours before the billing cycle ends.</li>
             <li>Free trials transition to paid subscriptions unless canceled in advance.</li>
             <li>Refunds are subject to the policies of the Apple App Store or Google Play Store.</li>
         </ul>
 
-        <h2>10. Third-Party Websites and Resources</h2>
+        <h2>9. Third-Party Websites and Resources</h2>
         <p>The app may link to third-party resources. We are not responsible for their content or availability. Use these at your own risk.</p>
 
-        <h2>11. Disclaimer of Warranties</h2>
+        <h2>10. Disclaimer of Warranties</h2>
         <p>The app is provided "as is" without warranties of any kind. We do not guarantee uninterrupted service or error-free operation.</p>
 
-        <h2>12. Limitation of Liability</h2>
+        <h2>11. Limitation of Liability</h2>
         <p>We are not liable for direct or indirect damages arising from your use of the app, including loss of data, profits, or unauthorized access to your account.</p>
 
-        <h2>13. Governing Law and Legal Compliance</h2>
+        <h2>12. Governing Law and Legal Compliance</h2>
         <p>This Agreement shall be governed by and construed in accordance with the laws of your jurisdiction. Any disputes arising under or in connection with this Agreement shall be subject to the non-exclusive jurisdiction of the courts in your jurisdiction.</p>
 
-        <h2>14. Termination and Severability</h2>
+        <h2>13. Termination and Severability</h2>
         <p>We reserve the right to terminate this Agreement at any time for any reason. If any provision is deemed unenforceable, the remaining terms remain in effect.</p>
 
-        <h2>15. Contact Information</h2>
-        <p>For questions or support, please contact us at <a href="mailto:pdfappnet@gmail.com">pdfappnet@gmail.com</a>.</p>
+        <h2>14. Contact Information</h2>
+        <p>For questions or support, please contact us at <a href="mailto:esignappnet@gmail.com">esignappnet@gmail.com</a>.</p>
     </div>
 </body>
 </html>
